--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "tsc *.ts"
+    "compile": "tsc *.ts",
+    "postinstall": "yarn run compile"
   },
   "repository": {
     "type": "git",
