--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "tsc",
-    "postinstall": "yarn run compile"
+    "compile": "tsc"
   },
   "repository": {
     "type": "git",
